[package]
name = "asteroid-tui"
version = "0.1.0"
authors = ["Sirio Negri <ziriuz84@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
rand = "0.8.5"
config = "0.14.0"
crossterm = "0.28.1"
dirs = "5.0.1"
ratatui = "0.28.1"
reqwest = {version = "0.12.7", features = ["blocking","json"]}
scraper = "0.20.0"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
serde_repr = "0.1.19"
chrono = "0.4.38"
toml = "0.8.14"
tui-prompts ="0.4.0"
