[package]
name = "asteroid-tui"
version = "0.1.0"
authors = ["Sirio Negri <ziriuz84@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
config = "0.14.0"
promkit = "0.5.0"
dirs = "5.0.1"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
scraper = "0.20.0"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.128"
serde_repr = "0.1.19"
chrono = "0.4.38"
rand = "0.8.5"
toml = "0.8.19"
