[package]
name = "asteroid-tui"
version = "0.1.0"
authors = ["Sirio Negri <ziriuz84@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
config = "0.15.7"
promkit = "0.6.2"
dirs = "6.0.0"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
scraper = "0.22.0"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
serde_repr = "0.1.19"
chrono = "0.4.39"
rand = "0.9.0"
toml = "0.8.20"
comfy-table = "7.1.4"
urlencoding = "2.1.3"
percent-encoding = "2.3.1"
regex = "1.11.1"
